@@ -3,23 +3,24 @@
 	<section>
 		<title>Tcl Scripts Processing</title>
 		<para>
-			The mod_rivet &version2-generic; modules handle an HTTP request
-			by running a Tcl script or a Rivet (.rvt file) template 
-			whose path appears encoded in the URI (an alias translation or 
+			Until &version2-generic; versions Rivet handled requests
+			following the vision that inspired the original design
+			which was summarized in the definition <q>Web programming
+			like in PHP, but with Tcl</q>. HTTP requests triggered the
+			execution of Tcl scripts or a Rivet (.rvt file) templates
+			whose path is encoded in the URI (an alias translation or
 			URL rewriting might occur to establish the real path). 
 			The execution of such scripts can be preceded and/or 
-			followed by the execution scripts common to every path 
-			configured through the BeforeScript and AfterScript
+			followed by the execution of scripts common to a whole web site
+			or to a hierarchy of directories the BeforeScript and AfterScript
 			directives. These scripts can be configured on a per virtual host, 
 			per directory or per user basis. Execution of such combined
 			scripts can break because of coding errors (thus triggering the
 			ErrorScript execution) or it can deliberately interrupt 
-			ordinary execution by calling ::rivet::abort_page (triggering
+			ordinary execution by calling ::rivet::abort_page (which triggers
 			the execution of a script defined by the directive AbortScript). 
-			This scheme is in case 
-			terminated by a further configurable script (AfterEveryScript).
-			In mod_rivet &version2-generic; module series 
-			this model of request handling was coded within
+			This scheme is in case terminated by a further configurable script 
+			(AfterEveryScript). This model of request handling was coded within
 			the module mod_rivet.so itself. 
 		</para>
 		<para>
@@ -31,7 +32,7 @@
 		<programlisting>&request_handler.tcl;</programlisting>
 
 		<para>
-			Note the call to new &version30; command ::rivet::url_script
+			Note the call to new &version3-generic; command ::rivet::url_script
 			that returns the body of the Tcl script or Rivet template
 			pointed by the URL. 
 		</para>
